--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -18,7 +18,9 @@
                 Online Map
             </div>
         </a>
-        <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
+        <div class="google-maps">
+            <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
+        </div>
     </div>
 </body>
 </html>
