--- a/www/sites/offlinemap.html
+++ b/www/sites/offlinemap.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <script type="application/javascript" src="../js/iscroll.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-    <script type="text/javascript">
-        var myScroll;
-        function loaded() {
-            myScroll = new iScroll('wrapper',
-                    { zoom:true, zoomMax: 4 });
-        }
+    <!-- Bootstrap init -->
+    <script src="../js/jquery-1.11.2.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="phonegap.js"></script>
 
-        document.addEventListener('DOMContentLoaded', loaded, false);
-    </script>
-    <style type="text/css">
-        div#wrapper img { -webkit-transform:translate3d(0,0,0) }
-    </style>
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
+
+    <title>Offline Map</title>
 
 </head>
 <bod>
-    <div id="wrapper" style="width:100%">
-        <img src="../img/djs/alesso.jpg" width="800" alt="" style="max-width:100%; height:auto;">
+
+    <div class="content-info">
+        <a href="../index.html" style="text-decoration: none">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+                Offline Map
+            </div>
+        </a>
+        <img src="../img/max/offlinemap.jpg" class="img-responsive">
     </div>
 
-    <script>loaded();</script>
 </bod>
 </html>
