--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-xs-4" style="padding: 0"><a href="sites/gallery.html"><img class="item_main" style="float: right" src="img/max/gallery_icon.png"></a></div>
                 <div class="col-xs-4" style="padding: 0"><a href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a href="sites/zoom.html"><img class="item_main" style="float: left" src="img/max/offlinemap_icon.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/offlinemap.html"><img class="item_main" style="float: left" src="img/max/offlinemap_icon.png"></a></div>
             </div>
 
             <hr style="margin: 15px 40px 15px 40px;">
