--- a/www/index.html
+++ b/www/index.html
@@ -7,13 +7,18 @@
     <!-- Bootstrap init -->
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="phonegap.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
         <!-- Styles init -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
+
+    <script>
+        $(document).ready(function(){
+           $("#div1").fadeIn(1000);
+        });
+    </script>
 
     <title>Electric Love Festival</title>
 </head>
@@ -42,29 +47,27 @@
             </div>
 
             <hr style="margin: 15px 40px 15px 40px;">
+            <div class="container" id="div1" style="display: none;">
+                <div class="numbers" id="count2"></div>
 
-            <div class="numbers" id="count2"></div>
+                <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
+                    <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
+                    <div class="col-xs-3 numbers" id="dhour"></div>
+                    <div class="col-xs-3 numbers" id="dmin"></div>
+                    <div class="col-xs-3 numbers" id="dsec"></div>
 
-            <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
-                <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
-                <div class="col-xs-3 numbers" id="dhour"></div>
-                <div class="col-xs-3 numbers" id="dmin"></div>
-                <div class="col-xs-3 numbers" id="dsec"></div>
-
-            </div>
+                </div>
 
 
 
-            <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
-                <div class="col-xs-3 title" id="days">DAYS</div>
-                <div class="col-xs-3 title" id="hours">HOURS</div>
-                <div class="col-xs-3 title" id="minutes">MINUTES</div>
-                <div class="col-xs-3 title" id="seconds">SECONDS</div>
-
+                <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
+                    <div class="col-xs-3 title" id="days">DAYS</div>
+                    <div class="col-xs-3 title" id="hours">HOURS</div>
+                    <div class="col-xs-3 title" id="minutes">MINUTES</div>
+                    <div class="col-xs-3 title" id="seconds">SECONDS</div>
+                </div>
             </div>
         </div>
-
-
     </div>
     <script src="js/countdown.js"></script>
 
