--- a/www/index.html
+++ b/www/index.html
@@ -14,16 +14,18 @@
     <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
 
+
+    <!-- this function provides a non lag for the countdown area, without it centering would be jitter-->
     <script>
         $(document).ready(function(){
-           $("#div1").fadeIn(1000);
+           $('body').fadeIn(0);
         });
     </script>
 
     <title>Electric Love Festival</title>
 </head>
 
-<body>
+<body style="display: none">
     <div class="parent" style="overflow: hidden">
         <div class="child" style="overflow: hidden">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
@@ -47,7 +49,7 @@
             </div>
 
             <hr style="margin: 15px 40px 15px 40px;">
-            <div class="container" id="div1" style="display: none;">
+            <div class="container" id="div1" style="">
                 <div class="numbers" id="count2"></div>
 
                 <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
