--- a/www/sites/timetable.html
+++ b/www/sites/timetable.html
@@ -13,21 +13,22 @@
 
 </head>
 
+
 <body>
     <div id="everything" class="content-info">
-        <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-            <a href="../index.html" style="text-decoration: none;">
-                <div class="col-xs-10 header_div" style="padding: 0">
+        <a href="../index.html" style="text-decoration: none">
+            <div class="col-xs-12 header_div" style="padding: 0">
+                <div style="float: left;">
                     <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin-right: -50px"/>
-                    Timetable
                 </div>
-            </a>
-            <div class="col-xs-2" style="padding: 0">
-                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0 0 5px"
-                    onmouseover="this.src='../img/max/options2.png'"
-                    onmouseout="this.src='../img/max/options.png'"></a>
+                <em class="header_div header_new" style="background-color: transparent">Timetable</em>
+                <div style="float: right;">
+                        <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 5px 0 0"
+                            onmouseover="this.src='../img/max/options2.png'"
+                            onmouseout="this.src='../img/max/options.png'"></a>
+                </div>
             </div>
-        </div>
+        </a>
         <!-- Modal HTML -->
         <div id="myModal" class="modal fade">
             <div class="modal-dialog tt-modal-dialog">
