--- a/www/sites/merch.html
+++ b/www/sites/merch.html
@@ -34,9 +34,10 @@
         </div>
     </a>
     <div class="banner">to purchase products go online:  <a href="http://www.electriclove.at/en/merchandise">
-        <img src="../img/max/shopping.png" style="height: 30px;"
-        onmouseover="this.src='../../img/max/shopping2.png'"
-        onmouseout="this.src='../../img/max/shopping.png'"/></a> </div>
+        <a class="btn"><img src="../img/max/shopping.png" style="height: 30px;"
+            onmouseover="this.src='../img/max/shopping_blue.png'"
+            onmouseout="this.src='../img/max/shopping.png'"></a>
+    </div>
 
     <div class="container-fluid" style=" overflow: auto; padding: 0px">
 
