--- a/www/sites/timetable.html
+++ b/www/sites/timetable.html
@@ -48,7 +48,7 @@
         </div>
 
         <ul class="nav nav-pills" style="margin-bottom: 10px;">
-            <li class="active col-xs-4 pill try"><a data-toggle="pill" class="tt_tab" href="#wednesday"><span><img src="../img/max/live.png" style="height: 20px; margin: 0 2px 3px 0" /></span>LIVE</a></li>
+            <li class="active col-xs-4 pill" style="border-left: 2px solid #808080"><a data-toggle="pill" class="tt_tab" href="#wednesday"><span><img src="../img/max/live.png" style="height: 20px; margin: 0 2px 3px 0" /></span>LIVE</a></li>
             <li class="col-xs-2 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">WED</a></li>
             <li class="col-xs-2 pill"><a data-toggle="pill" class="tt_tab" href="#thursday">THU</a></li>
             <li class="col-xs-2 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
