alphabetically ordering at artists
gallery black bars

--- a/www/sites/gallery.html
+++ b/www/sites/gallery.html
@@ -39,6 +39,7 @@
             Gallery
         </div>
     </a>
+    <div style="background-color: black; height: 40px; margin-top: 60px"></div>
     <div class="demo-wrapper">
         <div id="slider" class="swipe">
             <div class="swipe-wrap">
@@ -91,6 +92,7 @@
 
         </div>
     </div>
+    <div style="background-color: black; height: 40px;"></div>
     <div class="col-xs-6 nav prev navbutton">Prev</div>
     <div class="col-xs-6 nav next navbutton">Next</div>
 
