--- a/www/sites/geolocation.html
+++ b/www/sites/geolocation.html
@@ -1,45 +1,44 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Device Properties Example</title>
+<section id="wrapper">
+    Click the allow button to let the browser find your location.
 
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <article>
 
-        // Wait for device API libraries to load
-        //
-        document.addEventListener("deviceready", onDeviceReady, false);
+    </article>
+    <script>
+        function success(position) {
+            var mapcanvas = document.createElement('div');
+            mapcanvas.id = 'mapcontainer';
+            mapcanvas.style.height = '400px';
+            mapcanvas.style.width = '600px';
 
-        // device APIs are available
-        //
-        function onDeviceReady() {
-            navigator.geolocation.getCurrentPosition(onSuccess, onError);
+            document.querySelector('article').appendChild(mapcanvas);
+
+            var coords = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+
+            var options = {
+                zoom: 15,
+                center: coords,
+                mapTypeControl: false,
+                navigationControlOptions: {
+                    style: google.maps.NavigationControlStyle.SMALL
+                },
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            var map = new google.maps.Map(document.getElementById("mapcontainer"), options);
+
+            var marker = new google.maps.Marker({
+                position: coords,
+                map: map,
+                title:"You are here!"
+            });
         }
 
-        // onSuccess Geolocation
-        //
-        function onSuccess(position) {
-            var element = document.getElementById('geolocation');
-            element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
-            'Longitude: '          + position.coords.longitude             + '<br />' +
-            'Altitude: '           + position.coords.altitude              + '<br />' +
-            'Accuracy: '           + position.coords.accuracy              + '<br />' +
-            'Altitude Accuracy: '  + position.coords.altitudeAccuracy      + '<br />' +
-            'Heading: '            + position.coords.heading               + '<br />' +
-            'Speed: '              + position.coords.speed                 + '<br />' +
-            'Timestamp: '          + position.timestamp                    + '<br />';
-        }
-
-        // onError Callback receives a PositionError object
-        //
-        function onError(error) {
-            alert('code: '    + error.code    + '\n' +
-            'message: ' + error.message + '\n');
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(success);
+        } else {
+            error('Geo Location is not supported');
         }
 
     </script>
-</head>
-<body>
-<p id="geolocation">Finding geolocation...</p>
-</body>
-</html>
+</section>
