--- a/www/sites/geolocation.html
+++ b/www/sites/geolocation.html
@@ -1,44 +1,27 @@
 <section id="wrapper">
     Click the allow button to let the browser find your location.
 
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <article>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
 
-    </article>
+    <div id="click"style="height: 200px; width: 100px; background-color: red">Click me to get your position coordinates!</div>
+    <div class="lat-view" style="height: 200px; width: 100px">Latitude</div>
+    <div class="long-view" style="height: 200px; width: 100px">Longitude</div>
+
     <script>
-        function success(position) {
-            var mapcanvas = document.createElement('div');
-            mapcanvas.id = 'mapcontainer';
-            mapcanvas.style.height = '400px';
-            mapcanvas.style.width = '600px';
+        document.addEventListener('deviceready', onDeviceReady, false);
 
-            document.querySelector('article').appendChild(mapcanvas);
+        function onDeviceReady() {
 
-            var coords = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-
-            var options = {
-                zoom: 15,
-                center: coords,
-                mapTypeControl: false,
-                navigationControlOptions: {
-                    style: google.maps.NavigationControlStyle.SMALL
-                },
-                mapTypeId: google.maps.MapTypeId.ROADMAP
-            };
-            var map = new google.maps.Map(document.getElementById("mapcontainer"), options);
-
-            var marker = new google.maps.Marker({
-                position: coords,
-                map: map,
-                title:"You are here!"
+            function disp(pos) {
+                $('.lat-view').html(pos.coords.latitude);
+                $('.long-view').html(pos.coords.longitude);
+            }
+            $("#click").onclick(function () {
+                navigator.geolocation.getCurrentPosition(disp);
             });
-        }
 
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(success);
-        } else {
-            error('Geo Location is not supported');
-        }
 
+
+        }
     </script>
 </section>
