--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -3,23 +3,28 @@
 <head>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
     <script src="phonegap.js"></script>
-    <script src="../js/map.js"></script>
+    <script src="../js/jquery-1.11.2.min.js"></script>
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <title>Online Map</title>
 
 </head>
 
-<body>
-    <div class="content-info" style="padding: 0; margin: 0 0 5px 0">
+<body style="height: auto">
+    <div class="content-info" style="padding: 0; margin: 0 0 5px 0; height: auto">
         <a href="../index.html" style="text-decoration: none">
             <div class="header_div">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Online Map
+                <em class="header_div" style="background-color: transparent">Map</em>
+                <div style="float: right;"><a id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px -10px 0"
+                    onmouseover="this.src='../img/max/gps_blue.png'"
+                    onmouseout="this.src='../img/max/gps.png'"></a></div>
             </div>
         </a>
+
         <div class="google-maps">
             <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
         </div>
     </div>
+    <script src="../js/map.js"></script>
 </body>
 </html>
