--- a/www/index.html
+++ b/www/index.html
@@ -17,15 +17,23 @@
 
     <!-- this function provides a non lag for the countdown area, without it centering would be jitter-->
     <script>
-        $(document).ready(function(){
-           $('body').fadeIn(400);
-        });
+        document.addEventListener("deviceready", onDeviceReady, false);
+
+        // Cordova is ready
+        //
+        function onDeviceReady() {
+            // TODO load data from server
+
+            setTimeout(function() {
+                navigator.splashscreen.hide();
+            }, 2000);
+        }
     </script>
 
     <title>Electric Love Festival</title>
 </head>
 
-<body style="display: none">
+<body>
     <div class="parent" style="overflow: hidden">
         <div class="child" style="overflow: hidden">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
@@ -35,7 +43,7 @@
             <div class="row" style="margin-bottom: 15px">
                 <div class="col-xs-4" style="padding: 0"><a href="sites/timetable.html"><img class="item_main" style="float: right" src="img/max/timetable.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0"><a href="sites/stages.html"><img class="item_main" src="img/max/stages_icon.png"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a href="sites/geolocation.html"><img class="item_main" style="float: left" src="img/max/maps.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/map.html"><img class="item_main" style="float: left" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row" style="margin-bottom: 15px">
                 <div class="col-xs-4" style="padding: 0"><a href="sites/artists.html"><img class="item_main" style="float: right" src="img/max/dj.gif"></a></div>
@@ -47,7 +55,6 @@
                 <div class="col-xs-4" style="padding: 0"><a href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0"><a href="sites/offlinemap.html"><img class="item_main" style="float: left" src="img/max/offlinemap_icon.png"></a></div>
             </div>
-
             <hr style="margin: 15px 40px 15px 40px;">
             <div class="container" id="div1" style="">
                 <div class="numbers" id="count2"></div>
@@ -59,9 +66,6 @@
                     <div class="col-xs-3 numbers" id="dsec"></div>
 
                 </div>
-
-
-
                 <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
                     <div class="col-xs-3 title" id="days">DAYS</div>
                     <div class="col-xs-3 title" id="hours">HOURS</div>
