--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -15,11 +15,13 @@
             <div class="header_div">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 <em class="header_div" style="background-color: transparent">Map</em>
-                <div style="float: right;"><a id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px -10px 0"
-                    onmouseover="this.src='../img/max/gps_blue.png'"
-                    onmouseout="this.src='../img/max/gps.png'"></a></div>
+
+                <!--<div style="float: right;"><a id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px -10px 0"-->
+                    <!--onmouseover="this.src='../img/max/gps_blue.png'"-->
+                    <!--onmouseout="this.src='../img/max/gps.png'"></a></div>-->
             </div>
         </a>
+        <button id="getLoc" onclick="getLocation()">Find ME!</button>
 
         <div class="google-maps">
             <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
