--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -13,22 +13,20 @@
 </head>
 
 <body style="height: auto">
-    <div class="content-info" style="padding: 0; margin: 0 0 5px 0; height: auto">
-            <div class="header_div" style="z-index: 2">
-                <a href="../index.html" style="text-decoration: none">
-                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                <em class="header_div" style="background-color: transparent">Map</em>
-                </a>
-                <div style="float: right; height: 50px" id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px 0 0"
-                                                                                                 onmouseover="this.src='../img/max/gps_blue.png'"
-                                                                                                 onmouseout="this.src='../img/max/gps.png'"></div>
-            </div>
-
-        <div class="col-xs-12 finder">Activate GPS on your device to see your position!</div>
-        <div class="google-maps">
-            <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
-        </div>
+<div class="content-info" style="padding: 0; margin: 0 0 5px 0; height: auto">
+    <div class="header_div" style="z-index: 2">
+        <a href="../index.html" style="text-decoration: none">
+            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+            <em class="header_div" style="background-color: transparent">Map</em>
+        </a>
+        <div style="float: right; height: 50px" id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px 0 0"></div>
     </div>
-    <script src="../js/map.js"></script>
+
+    <div class="col-xs-12 finder">Activate GPS on your device to see your position!</div>
+    <div class="google-maps">
+        <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
+    </div>
+</div>
+<script src="../js/map.js"></script>
 </body>
 </html>
