map header no hover
test at djs home

--- a/www/sites/djs/alesso.html
+++ b/www/sites/djs/alesso.html
@@ -55,6 +55,9 @@
                 onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
             </span>
         </div>
+        <div class="artist_social" style="margin-top: 0; font-family: elfFont; line-height: 40px">
+            Mainstage: 22:00-23:00!
+        </div>
         <div class="artist_home">Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
             Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
             Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
@@ -69,9 +72,6 @@
             Im Herbst 2014 kooperierte er mit der schwedischen Sängerin Tove Lo, woraus der Track Heroes entstand.
         </div>
 
-        <div class="artist_social" style="border: none; font-family: elfFont; line-height: 40px">
-            Mainstage: 22:00-23:00!
-        </div>
 
     </div>
 </div>
