--- a/www/sites/djs/aoki.html
+++ b/www/sites/djs/aoki.html
@@ -33,7 +33,7 @@
     </a>
 
     <div><img src="../../img/djs/aoki_main.jpg" class="img-responsive"></div>
-    <div class="artist_social">
+    <div class="artist_social" style="border: none">
         <span><a href="http://steveaoki.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
             onmouseover="this.src='../../img/social/home_hover.gif'"
             onmouseout="this.src='../../img/social/home.gif'"/></a>
@@ -52,6 +52,9 @@
             onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
             onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
+    </div>
+    <div class="artist_social" style="margin-top: 0; font-family: elfFont; line-height: 40px">
+        Mainstage: 22:00-23:00!
     </div>
     <div class="artist_home">Steve Aoki stammt aus den USA und hat
         sich dem Genre Electro/Indie verschrieben. Bereits in seiner Zeit an der
