--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -14,7 +14,7 @@
 
 <body style="height: auto">
 <div class="content-info" style="padding: 0; margin: 0 0 5px 0; height: auto">
-    <div class="header_div" style="z-index: 2">
+    <div class="headerTest" style="z-index: 2">
         <a href="../index.html" style="text-decoration: none">
             <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             <em class="header_div" style="background-color: transparent">Map</em>
