--- a/www/sites/djs/aoki.html
+++ b/www/sites/djs/aoki.html
@@ -53,7 +53,7 @@
             onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
     </div>
-    <div class="artist_social" style="margin-top: 0; font-family: elfFont; line-height: 40px">
+    <div class="artist_social" style="margin: 0 0 5px 0; border: none; font-family: elfFont; line-height: 40px">
         Mainstage: 22:00-23:00!
     </div>
     <div class="artist_home">Steve Aoki stammt aus den USA und hat
