--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -24,6 +24,7 @@
 <body>
 
     <div id="everything" class="content-info">
+        <!-- Good Solution for a fixed bar-->
         <a href="../index.html" style="text-decoration: none">
             <div class="row header_fixed">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
@@ -270,7 +271,150 @@
                 <div class="col-xs-10 artist_container name">Oliver Heldens<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
             </div>
-
+            <div class="row alphabet">P</div>
+            <div class="row artist_text"><a href="djs/peer.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/peer_kusiv.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Peer Kusiv<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/pegboard_nerds.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/pegboard_nerds.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Pegboard Nerds<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/pendulum.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/pendulum.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Pendulum<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/psycho.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/psycho_punkz.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Psycho Punkz<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">R</div>
+            <div class="row artist_text"><a href="djs/r3hab.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/r3hab.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">R3hab<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/rand.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/ran_d.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Ran - D<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/rene.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/rene_rodrigezz.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Rene Rodrigezz<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/robin.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/robin_schulz.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Robin Schulz<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">S</div>
+            <div class="row artist_text"><a href="djs/showtek.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/showtek.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Showtek<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/spada.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/spada.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Spada<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/steve.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/steve_aoki.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Steve Aoki<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/subfocus.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/sub_focus.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Sub Focus<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">T</div>
+            <div class="row artist_text"><a href="djs/thomas.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/thomas_jack.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Thomas Jack<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/tiesto.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/tiesto.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Tiesto<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/timo.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/timo_maas.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Timo Maas<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/toneshifterz.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/toneshifterz.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Toneshifterz<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">U</div>
+            <div class="row artist_text"><a href="djs/ummet.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/ummet_ozcan.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Ummet Ozcan<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">V</div>
+            <div class="row artist_text"><a href="djs/vicetone.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/vicetone.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Vicetone<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/vinai.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/vinai.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Vinai<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">W</div>
+            <div class="row artist_text"><a href="djs/ww.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/w__w.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">W & W<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/wasted.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/wasted_penguinz.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Wasted Penguinz<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/watermat.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/watermat.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Watermät<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/west.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/west_mb.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">West MB<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/wildstylez.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/wildstylez.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Wildstylez<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">Y</div>
+            <div class="row artist_text"><a href="djs/yves.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/yves_v.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Yves V<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row alphabet">Z</div>
+            <div class="row artist_text"><a href="djs/zatox.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/zatox.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Zatox<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
+            <div class="row artist_text"><a href="djs/zedd.html" style="color: #ffffff">
+                <div class="col-xs-2 artist_container"><img src="../img/djs_head/zedd.jpg" class="artist_img"/></div>
+                <div class="col-xs-10 artist_container name">Zedd<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
+            </div>
 
 
 
