--- a/www/sites/djs/armin.html
+++ b/www/sites/djs/armin.html
@@ -11,7 +11,6 @@
     <!-- Styles init -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/styles.css" type="text/css"/>
 
@@ -25,13 +24,13 @@
 
 <div id="everything" class="content-info">
 
-    <a href="" class="js">
+    <a href="">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
 
-    <div><img src="../../img/djs_head/armin_main.jpg" class="img-responsive"></div>
+    <div><img src="../../img/djs_slider/armin_slider.jpg" class="img-responsive"></div>
     <div class="artist_social">
         <span><a href="http://www.arminvanbuuren.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
             onmouseover="this.src='../../img/social/home_hover.gif'"
@@ -46,6 +45,7 @@
             onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
             onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
+        <div style="height: 410px">Hello</div>
     </div>
     <div class="artist_home">Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent.
         Mittlerweile war Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ,
