design change: blue header no splashscreen, maybe buggy on other devices

--- a/www/sites/food.html
+++ b/www/sites/food.html
@@ -26,7 +26,7 @@
 
 <div id="everything" class="content-info">
     <a href="../index.html" style="text-decoration: none">
-        <div class="header_div">
+        <div class="header_fixed">
             <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             Food
         </div>
