--- a/www/sites/merch.html
+++ b/www/sites/merch.html
@@ -27,16 +27,17 @@
 <body>
 
 <div class="content-info">
-    <a href="../index.html" style="color: white; text-decoration: none;">
-        <div class="header_div" style="color: white">
-            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-            Merchandise
+    <a href="../index.html" style="text-decoration: none">
+        <div class="row header_fixed">
+            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+            <em class="header_text">Merchandise</em>
         </div>
     </a>
     <div class="banner">to purchase products go online:  <a href="http://www.electriclove.at/en/merchandise">
-        <a class="btn"><img src="../img/max/shopping.png" style="height: 30px;"
+        <img src="../img/max/shopping.png" style="height: 30px;"
             onmouseover="this.src='../img/max/shopping_blue.png'"
-            onmouseout="this.src='../img/max/shopping.png'"></a>
+            onmouseout="this.src='../img/max/shopping.png'">
+        </a>
     </div>
 
     <div class="container-fluid" style=" overflow: auto; padding: 0px">
