--- a/www/sites/stages.html
+++ b/www/sites/stages.html
@@ -16,56 +16,30 @@
 
 <body>
     <div id="everything" class="content-info">
-        <a href="../index.html" style="color: white; text-decoration: none;">
-            <div class="header_div" style="color: white">
-                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Stages
+        <a href="../index.html" style="text-decoration: none">
+            <div class="row header_fixed">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+                <em class="header_text">Merchandise</em>
             </div>
-        </a><!--
-            <div class="col-xs-2" style="padding: 0px">
-                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 5px"
-                    onmouseover="this.src='../img/max/options2.png'"
-                    onmouseout="this.src='../img/max/options.png'"></a>
-            </div>
-            -->
+        </a>
 
-        <!-- Modal HTML
-        <div id="myModal" class="modal fade">
-            <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px;">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Sort by:</h4>
-                    </div>
-                    <div class="modal-body">
-                        <button type="button" class="btn btn-success">Name</button>
-                        <button type="button" class="btn btn-success">Time</button>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        ----------------------------------------->
-
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-top: 50px">
             <a href="stages/mainstage.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="mainstage">
                     <div class="stage_img"><img src="../img/stages/mainstage.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">MAINSTAGE</div>
                 </div>
             </a>
-            <a href="stages/clubcircus.html" style="text-decoration: none; color: #ffffff;">
-                <div class="row stage_row" id="clubcircus">
-                    <div><img src="../img/stages/clubcircus.jpg" class="col-xs-12 stage_img"></div>
-                    <div class="col-xs-12 stage_text">CLUBCIRCUS</div>
-                </div>
-            </a>
             <a href="stages/qdance.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="qdance">
                     <div><img src="../img/stages/q-dance.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">Q-DANCE</div>
+                </div>
+            </a>
+            <a href="stages/clubcircus.html" style="text-decoration: none; color: #ffffff;">
+                <div class="row stage_row" id="clubcircus">
+                    <div><img src="../img/stages/clubcircus.jpg" class="col-xs-12 stage_img"></div>
+                    <div class="col-xs-12 stage_text">CLUBCIRCUS</div>
                 </div>
             </a>
             <a href="stages/stonehenge.html" style="text-decoration: none; color: #ffffff;">
