--- a/www/sites/information.html
+++ b/www/sites/information.html
@@ -25,9 +25,9 @@
 
     <div id="everything" class="content-info">
         <a href="../index.html" style="text-decoration: none">
-            <div class="header_div">
-                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Information
+            <div class="row header_fixed">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+                <em class="header_text">Information</em>
             </div>
         </a>
 
