--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -19,8 +19,8 @@
             <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             Map
         </a>
-        <!--<div style="float: right; height: 50px" id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px 0 0"></div>-->
-    <button style="float: right; height: 50px; width: 50px;" id="getLoc" onclick="getLocation()"></button>
+       <div style="float: right; height: 50px" id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px 0 0"></div>
+    <!--<button style="float: right; height: 50px; width: 50px; background-image: url(../img/max/gps_blue.png)" id="getLoc" onclick="getLocation()"></button>-->
     </div>
 
 
