--- a/www/sites/stages/mainstage.html
+++ b/www/sites/stages/mainstage.html
@@ -13,14 +13,12 @@
 
 <body>
     <div id="everything" class="content-info">
-        <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-            <a href="" style="text-decoration: none;" class="js">
-                <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0">
-                    <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                    Mainstage
-                </div>
-            </a>
-        </div>
+        <a href="../stages.html" style="text-decoration: none">
+            <div class="row header_fixed">
+                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+                <em class="header_text">Mainstage</em>
+            </div>
+        </a>
         <div class="stage_info container-fluid">
             Just like in the previous editions the Electric Love Mainstage will
             represent the heart of the festival in a creative and innovative way.
