--- a/www/sites/stages.html
+++ b/www/sites/stages.html
@@ -19,7 +19,7 @@
         <a href="../index.html" style="text-decoration: none">
             <div class="row header_fixed">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
-                <em class="header_text">Merchandise</em>
+                <em class="header_text">Stages</em>
             </div>
         </a>
 
