--- a/www/sites/stages/clubcircus.html
+++ b/www/sites/stages/clubcircus.html
@@ -13,14 +13,12 @@
 
 <body>
 <div id="everything" class="content-info">
-    <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-        <a href="" style="text-decoration: none;" class="js">
-            <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Clubcircus
-            </div>
-        </a>
-    </div>
+    <a href="../stages.html" style="text-decoration: none">
+        <div class="row header_fixed">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+            <em class="header_text">Clubcircus</em>
+        </div>
+    </a>
     <div class="stage_info container-fluid">
         Der Club Circus bekommt 2015 ein neues Gesicht und eine neue Heimat.
         Nachdem der Club Circus in den letzten 2 Jahren in einem Zirkuszelt
