--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -14,17 +14,18 @@
 
 <body style="height: auto">
 <div class="content-info" style="padding: 0; margin: 0 0 5px 0; height: auto">
-    <div class="header_div">
-        <a href="../index.html" style="text-decoration: none; color: white">
-            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-            Map
-        </a>
-       <div style="float: right; height: 50px" id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px 0 0"></div>
+    <a href="../index.html" style="text-decoration: none">
+        <div class="row header_fixed" style="top: 0; left: -5px; height: 45px">
+            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 10px -70px 0 10px; "/>
+            <em class="header_text" style="line-height: 50px">Artists</em>
+        </div>
+    </a>
+
+    <div style="float: right; z-index: 1; height: 50px" id="getLoc" onclick="getLocation()"><img src="../img/max/gps.png" style="height: 40px; margin: 5px 5px 0 0"></div>
     <!--<button style="float: right; height: 50px; width: 50px; background-image: url(../img/max/gps_blue.png)" id="getLoc" onclick="getLocation()"></button>-->
-    </div>
 
 
-    <div class="col-xs-12 finder">Activate GPS on your device to see your position!</div>
+    <div class="col-xs-12 finder" style="margin-top: 55px">Activate GPS for position!</div>
     <div class="google-maps">
         <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
     </div>
